--- a/www/css/all.scss
+++ b/www/css/all.scss
@@ -1,3 +1,5 @@
+@import 'utils';
+
 body, html {
 	margin: 0;
 	padding: 0;
@@ -14,6 +16,19 @@ body, html {
 
 .parallax-section {
 	position: relative;
+}
+
+.mask-fader,
+.color-fader {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-repeat: no-repeat;
+	@include transition(opacity 1s ease-in);
+}
+.color-fader {
+	opacity: 0;
+	@include transition(opacity 1s ease-out);
 }
 
 .cat-section {
