--- a/www/css/all.scss
+++ b/www/css/all.scss
@@ -24,7 +24,7 @@ body, html {
 	top: 0;
 	left: 0;
 	background-repeat: no-repeat;
-	@include transition(opacity 1s ease-in);
+	@include transition(opacity 0.5s ease-in 0.5s);
 }
 .color-fader {
 	opacity: 0;
